2001-04-02  Ryan Nunn <triforce@merlin.net.au>
	* actor*.*: Also fixed rare bug that would occur when saving and a NPC
	  that had it's activity set to 'move to schedule'. Using S-Vr and Acty
	  save fields to do this.
	* gamewin.*, readnpcs.cc, usecode/*: Added SI Intrinsic 0xb4 Revert
	  Schedules. I also changed paint() to set_all_dirty() is
	  Game_window::center_view. center_view is also now called twice in
	  Game_window::read_npcs.
	* cheat_screen.cc: Added 'revert' to cheat screen schedule changer.
	  Also prevented setting schedules on monster npc's.

2001-04-01  Jeff Freedman  <jeff@amy.nerble.net>

	* Rendering-order changes.

2001-03-31  Jeff Freedman  <jeff@amy.nerble.net>

	* SI - Bug fixes for fighting on List Field.

2001-03-30  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* data/bg/fellowshipstaff.shp: my attempt at a fellowship staff
	* data/bg/flx.in, gump/Paperdoll_gump_info.cc, Makefile.*: added art
	* docs/art.txt: list of needed/done art for paperdolls

2001-03-30  Tristan Tarrant <nadir@users.sourceforge.net>

	* data/quotes.txt: New quote from Jeff

2001-03-30  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Added 'dead' flag, 'killable' flag.  SI combat is
	still really buggy, but perhaps more on the right track.

2001-03-29  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* keys.h: fixed 'double help' when using custom keybindings

2001-03-28  Jeff Freedman  <jeff@amy.nerble.net>

	* SI - Lots of usecode intrinsics added/verified/commented.

2001-03-28  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* tools/expack.cc, files/utils.*: fixed expack switch_slashes problem
	* gumps/Paperdoll_gump_info.cc: corrected cloak shape numbers

2001-03-28  Jeff Freedman  <jeff@amy.nerble.net>

	* Removed more 'paint()' calls in Usecode intrinsics to fix
	problem with disappearing faces in conversations.
	* In the File gump, the RETURN key does a 'save' if the action is
	unambiguous.

2001-03-27  Willem Jan Palenstijn <palenstijn@wanadoo.nl>