@@ -1,3 +1,9 @@
+2001-04-02  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Scheduled usecode:  Figured out opcode 0x01.  Fixes drawbridge
+	animation.
+	* Draw weapons with translucency if necessary.	
+
 2001-04-02  Ryan Nunn <triforce@merlin.net.au>
 	* actor*.*: Also fixed rare bug that would occur when saving and a NPC
 	  that had it's activity set to 'move to schedule'. Using S-Vr and Acty
